# marl-offline-coordination

./: .gitignore  ALGO_NOTES.md  LINUX_NOTES.md  README.md  REVISION_NOTES.md  TODO.md  final-appendix-plots.R  full_test.sh  pyproject.toml  requirements.txt  runner.sh  runner_revision.sh  runner_revision_dbr.sh  test_script.py
env/: forage.py  prison.py  rware.py
env/prison_simple/: README.md  prison_simple.py
env/robotic_warehouse/: __init__.py  rendering.py  smac_warehouse.py  warehouse.py
env/robotic_warehouse2/: __init__.py  rendering.py  smac_warehouse.py  warehouse.py
experiment/: README.md  env.py
experiment/examples/: cql_discrete.py
experiment/prison/: centralv.py  coma.py  iac.py  ipg.py  iql.py  maddpg.py  qcgraph.py  qcgraphqmix.py  qmix.py  qtran.py  seac.py  vdn.py
experiment/prison-base/: centralv.py  coma.py  iac.py  ipg.py  iql.py  maddpg.py  qcgraph.py  qcgraphqmix.py  qmix.py  qtran.py  seac.py  vdn.py
experiment/pursuit/: centralv.py  centralv_mrl.py  coma.py  iac.py  iac_mrl.py  ipg.py  ipg_mrl.py  iql.py  iql_mrl.py  maddpg.py  maddpg_mrl.py  qcgraph.py  qcgraph_mrl.py  qcgraphqmix.py  qcgraphqmix_mrl.py  qmix.py  qmix_mrl.py  qtran.py  qtran_mrl.py  seac.py  seac_mrl.py  (+2 more)
experiment/pursuit-base/: centralv.py  ipg.py  qcgraphqmix.py  qmix.py  qtran.py  seac.py  vdn.py
marlkit/: pythonplusplus.py
paper/: greed-is-good.md
test/: test_dbr.py  test_dbr_cnt.py  test_dbr_petting.py  test_envs.py  test_gru_iql_petting.py  test_iql_petting.py  test_iql_petting_small.py  test_mixer_petting.py  test_rllib_qmix.py  test_sac_petting.py
(+211 files in other folders)
