[tool.black]
line-length = 120
[tool.poetry]
name = "marl-offline-coordination"
version = "0.1.0"
description = ""
authors = ["chapman73 <csiu@squareup.com>"]
readme = "README.md"
packages = [{include = "marl_offline_coordination"}]

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
